added update tickets

--- a/app/templates/ticketList.html
+++ b/app/templates/ticketList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Active Tickets</title>
+  <title>User Tickets</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,12 +9,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<form action="http://127.0.0.1:5000/create_ticket">
-    <input type="submit" value="Create New Ticket">
-</form>
-<form action="http://127.0.0.1:5000/get_tickets">
-    <input type="submit" value="Get Tickets">
-</form>
 <body>
 <div class="container">
   <h2>Active Tickets</h2>
