added comment tickets

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,15 +9,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+
+<body>
 <form action="http://127.0.0.1:5000/create_ticket">
     <input type="submit" value="Create New Ticket">
 </form>
+<br>
 <form action="http://127.0.0.1:5000/get_tickets">
     <input type="submit" value="Get Tickets">
 </form>
-<body>
+<br>
 <div class="container">
-  <h2>Active Tickets</h2>
+  <h2>Tickets</h2>
   <p></p>
   <table class="table table-hover">
     <thead>
